--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 matplotlib==3.5.1
 networkx==2.7.1 
 scipy==1.9.3 
-streamlit==1.16.0
+streamlit==1.28.0
 streamlit-aggrid==0.3.3 
 pandas==1.5.3
 jsonpickle==1.5.1 
 pickleshare==0.7.5  
 plotly==5.11.0
 seaborn==0.12.2
+st-gsheets-connection
